--- a/api/pom.xml
+++ b/api/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>fhir2-api</artifactId>
+			<version>1.4.0</version>
 		</dependency>
 
 		<dependency>
