--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -29,6 +29,11 @@
 			<scope>provided</scope>
 			<classifier>tests</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>fhir2-api</artifactId>
+			<version>1.4.0</version>
+		</dependency>
 
 	</dependencies>
 
