--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
+				<artifactId>fhir2-api</artifactId>
+				<version>1.4.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
 				<artifactId>webservices.rest-omod</artifactId>
 				<version>${webservicesRestVersion}</version>
 				<type>jar</type>
